<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/user_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_user_email"
                tools:text="test@mail.com"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_email_til">

        <EditText
                android:id="@+id/user_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_user_password"
                tools:text="Password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
            android:id="@+id/user_roles_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_password_til"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/user_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save_user"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/user_roles_spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
