<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/user_login_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:layout_marginTop="@dimen/recycler_view_item_vertical_margin"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:lines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_role_admin_tv"
            app:layout_constraintBottom_toTopOf="@+id/user_email_tv"
            tools:text="User"/>

    <TextView
            android:id="@+id/user_role_admin_tv"
            android:layout_width="@dimen/user_role_abbreviation_size"
            android:layout_height="@dimen/user_role_abbreviation_size"
            style="@style/UserRoleAbbreviationStyle"
            android:text="@string/user_role_abbreviation_admin"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@+id/user_role_manager_tv"
            app:layout_constraintTop_toTopOf="@+id/user_login_tv"
            app:layout_constraintBottom_toBottomOf="@+id/user_login_tv"
            tools:visibility="visible"/>

    <TextView
            android:id="@+id/user_role_manager_tv"
            android:layout_width="@dimen/user_role_abbreviation_size"
            android:layout_height="@dimen/user_role_abbreviation_size"
            style="@style/UserRoleAbbreviationStyle"
            android:text="@string/user_role_abbreviation_manager"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@+id/user_role_regular_tv"
            app:layout_constraintTop_toTopOf="@+id/user_login_tv"
            app:layout_constraintBottom_toBottomOf="@+id/user_login_tv"
            tools:visibility="visible"/>

    <TextView
            android:id="@+id/user_role_regular_tv"
            android:layout_width="@dimen/user_role_abbreviation_size"
            android:layout_height="@dimen/user_role_abbreviation_size"
            style="@style/UserRoleAbbreviationStyle"
            android:text="@string/user_role_abbreviation_regular"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_login_tv"
            app:layout_constraintBottom_toBottomOf="@+id/user_login_tv"
            tools:visibility="visible"/>

    <TextView
            android:id="@+id/user_email_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:layout_marginTop="@dimen/recycler_view_item_vertical_margin"
            android:layout_marginBottom="@dimen/recycler_view_item_vertical_margin"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_tv"
            tools:text="test@mail.com"/>

</androidx.constraintlayout.widget.ConstraintLayout>
